--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #e8f0fe;
+  background-color: #00BFFF;
   border: 1px solid #b0c4de;
   padding: 20px;
   width: 90%;
@@ -573,11 +573,11 @@
     <strong>Sebelum mulai, atur kuki dulu ya 🍪</strong><br>
     Kuki esensial wajib agar situs ini berjalan dengan baik. Kami menggunakan kuki lain untuk analisis & personalisasi, hanya jika Anda setuju.
     <br>
-    <a href="#" style="color: #007bff; text-decoration: underline;">Kebijakan kuki kami</a>
+    <a href="#" style="color: #00BFFF; text-decoration: underline;">Kebijakan kuki kami</a>
   </p>
   <div style="text-align: right;">
     <button onclick="setCookieConsent(true)" style="
-      background-color: #673ab7;
+      background-color: #00BFFF;
       color: white;
       padding: 8px 15px;
       border: none;
