--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
   </p>
   <div style="text-align: right;">
     <button onclick="setCookieConsent(true)" style="
-      background-color: #00BFFF;
+      background-color: #e0e0e0;
       color: white;
       padding: 8px 15px;
       border: none;
