--- a/index.html
+++ b/index.html
@@ -197,6 +197,20 @@
     <h2>Tentang Saya</h2>
     <p>Selamat datang di perpustakaan digital saya! Website ini adalah tempat saya mengarsipkan berbagai koleksi tulisan, artikel, dan referensi yang bermanfaat bagi siapa saja yang mencintai ilmu dan wawasan baru.</p>
 </div>
+    
+    <!-- Bagian Kerja Sama -->
+<section id="kerjasama" class="kerjasama-section">
+  <div class="kerjasama-container">
+    <h2 class="kerjasama-title">🤝 Kerja Sama dengan Perpustakaan USU</h2>
+    <p class="kerjasama-desc">
+      Website ini menjalin kolaborasi dengan <strong>Perpustakaan Universitas Sumatera Utara (USU)</strong> untuk memperkuat akses informasi digital, layanan referensi akademik, serta literasi informasi bagi seluruh pengguna.
+    </p>
+    <a href="https://library.usu.ac.id/" target="_blank" class="kerjasama-btn">
+      Kunjungi Perpustakaan USU 📚
+    </a>
+  </div>
+</section>
+
 
 <!-- REKOMENDASI BUKU -->
 <div class="rekomendasi fade-in" style="margin-top: 60px; background: #f9f9f9; padding: 40px 20px; border-radius: 16px; box-shadow: 0 6px 18px rgba(0,0,0,0.1); max-width: 1100px; margin-left: auto; margin-right: auto;">
@@ -412,6 +426,65 @@
         </iframe>
     </div>
 </div>
+<style>
+    /* Gaya untuk Bagian Kerja Sama */
+.kerjasama-section {
+  background: linear-gradient(135deg, #ede7f6, #f3e5f5);
+  padding: 60px 20px;
+  font-family: 'Segoe UI', sans-serif;
+  animation: fadeIn 1s ease-in;
+}
+
+.kerjasama-container {
+  max-width: 900px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.kerjasama-title {
+  font-size: 32px;
+  color: #4a148c;
+  margin-bottom: 20px;
+  font-weight: bold;
+  animation: slideInTop 0.6s ease-out;
+}
+
+.kerjasama-desc {
+  font-size: 17px;
+  color: #333;
+  margin-bottom: 30px;
+  animation: slideInTop 0.8s ease-out;
+}
+
+.kerjasama-btn {
+  background-color: #6a1b9a;
+  color: #fff;
+  padding: 12px 25px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+  transition: all 0.3s ease;
+  animation: fadeIn 1.2s ease;
+  box-shadow: 0 4px 12px rgba(106, 27, 154, 0.3);
+}
+
+.kerjasama-btn:hover {
+  background-color: #4a0072;
+  transform: scale(1.05);
+}
+
+/* Animasi */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes slideInTop {
+  from { opacity: 0; transform: translateY(-30px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+ </style>   
 
 <!-- CSS untuk animasi -->
 <style>
@@ -573,11 +646,11 @@
     <strong>Sebelum mulai, atur kuki dulu ya 🍪</strong><br>
     Kuki esensial wajib agar situs ini berjalan dengan baik. Kami menggunakan kuki lain untuk analisis & personalisasi, hanya jika Anda setuju.
     <br>
-    <a href="#" style="color: #00BFFF; text-decoration: underline;">Kebijakan kuki kami</a>
+    <a href="#" style="color: #007bff; text-decoration: underline;">Kebijakan kuki kami</a>
   </p>
   <div style="text-align: right;">
     <button onclick="setCookieConsent(true)" style="
-      background-color: #e0e0e0;
+      background-color: #673ab7;
       color: white;
       padding: 8px 15px;
       border: none;
