--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <p>Selamat datang di perpustakaan digital saya! Website ini adalah tempat saya mengarsipkan berbagai koleksi tulisan, artikel, dan referensi yang bermanfaat bagi siapa saja yang mencintai ilmu dan wawasan baru.</p>
 </div>
     
-    <!-- Bagian Kerja Sama -->
+ <!-- Bagian Kerja Sama -->
 <section id="kerjasama" class="kerjasama-section">
   <div class="kerjasama-container">
     <h2 class="kerjasama-title">🤝 Kerja Sama dengan Perpustakaan USU</h2>
@@ -210,7 +210,6 @@
     </a>
   </div>
 </section>
-
 
 <!-- REKOMENDASI BUKU -->
 <div class="rekomendasi fade-in" style="margin-top: 60px; background: #f9f9f9; padding: 40px 20px; border-radius: 16px; box-shadow: 0 6px 18px rgba(0,0,0,0.1); max-width: 1100px; margin-left: auto; margin-right: auto;">
@@ -427,63 +426,53 @@
     </div>
 </div>
 <style>
-    /* Gaya untuk Bagian Kerja Sama */
+  /* Bagian Kerja Sama - Selaras dengan Bagian About */
 .kerjasama-section {
-  background: linear-gradient(135deg, #ede7f6, #f3e5f5);
-  padding: 60px 20px;
+  background: #f9f9f9;
+  padding: 40px 20px;
   font-family: 'Segoe UI', sans-serif;
-  animation: fadeIn 1s ease-in;
 }
 
 .kerjasama-container {
-  max-width: 900px;
+  max-width: 800px;
   margin: 0 auto;
   text-align: center;
+  background: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .kerjasama-title {
-  font-size: 32px;
-  color: #4a148c;
+  font-size: 28px;
+  color: #00BFFF;
   margin-bottom: 20px;
   font-weight: bold;
-  animation: slideInTop 0.6s ease-out;
 }
 
 .kerjasama-desc {
-  font-size: 17px;
+  font-size: 16px;
   color: #333;
+  line-height: 1.6;
   margin-bottom: 30px;
-  animation: slideInTop 0.8s ease-out;
 }
 
 .kerjasama-btn {
-  background-color: #6a1b9a;
-  color: #fff;
+  background-color: #00BFFF;
+  color: white;
   padding: 12px 25px;
   border-radius: 8px;
   text-decoration: none;
   font-weight: bold;
-  display: inline-block;
   transition: all 0.3s ease;
-  animation: fadeIn 1.2s ease;
-  box-shadow: 0 4px 12px rgba(106, 27, 154, 0.3);
+  box-shadow: 0 4px 12px rgba(0, 191, 255, 0.3);
 }
 
 .kerjasama-btn:hover {
-  background-color: #4a0072;
+  background-color: #009acd;
   transform: scale(1.05);
 }
 
-/* Animasi */
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-@keyframes slideInTop {
-  from { opacity: 0; transform: translateY(-30px); }
-  to { opacity: 1; transform: translateY(0); }
-}
  </style>   
 
 <!-- CSS untuk animasi -->
@@ -631,7 +620,7 @@
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #00BFFF;
+  background-color: #f9f9f9;
   border: 1px solid #b0c4de;
   padding: 20px;
   width: 90%;
