--- a/index.html
+++ b/index.html
@@ -259,11 +259,32 @@
 <div class="rekomendasi fade-in" style="margin-top: 60px; background: #f9f9f9; padding: 40px 20px; border-radius: 16px; box-shadow: 0 6px 18px rgba(0,0,0,0.1); max-width: 1100px; margin-left: auto; margin-right: auto;">
     <h3 style="color: #00BFFF; text-align: center; margin-bottom: 30px;">Rekomendasi Buku</h3>
     
-    <!-- Kolom Pencarian -->
-    <div style="text-align: center; margin-bottom: 30px;">
-        <input type="text" id="searchInput" onkeyup="searchBooks()" placeholder="Cari buku..." 
-               style="padding: 12px 20px; width: 80%; max-width: 400px; border: 1px solid #ccc; border-radius: 8px; font-size: 16px;">
+   <!-- Kolom Pencarian yang Ditingkatkan -->
+<div style="display: flex; justify-content: center; margin-bottom: 30px;">
+    <div style="position: relative; width: 80%; max-width: 400px;">
+        <input type="text" id="searchInput" onkeyup="searchBooks()" placeholder="🔍 Cari buku..."
+            style="
+                width: 100%;
+                padding: 12px 40px 12px 20px;
+                border: 1px solid #ccc;
+                border-radius: 25px;
+                font-size: 16px;
+                transition: all 0.3s ease;
+                box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            "
+            onfocus="this.style.borderColor='#4CAF50'; this.style.boxShadow='0 0 8px rgba(76, 175, 80, 0.4)'"
+            onblur="this.style.borderColor='#ccc'; this.style.boxShadow='0 2px 5px rgba(0,0,0,0.1)'"
+        >
+        <span style="
+            position: absolute;
+            right: 15px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #aaa;
+            pointer-events: none;
+        ">🔍</span>
     </div>
+</div>
 
     <!-- Kontainer Buku -->
     <div class="buku-container" id="bukuContainer" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px;">
