--- a/contact.html
+++ b/contact.html
@@ -141,20 +141,21 @@
 <body>
 
 <header class="header-library">
-    <div class="overlay"></div>
-    <div class="header-content">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
-        <h1>Perpustakaan Jesika Yusnita Laoly</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="About.html">About</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="tabel.html">Tabel</a></li>
-                <li><a href="http://localhost/tabel.php">PHP</a></li>
-            </ul>
-        </nav>
-    </div>
+  <div class="overlay"></div>
+  <div class="header-content">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website" />
+    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="tabel.html">Tabel</a></li>
+         <li><a href="Prestasi.html">Prestasi</a></li>
+        <li><a href="http://localhost/tabel.php">PHP</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
 
  <div class="contact-card" style="margin-top: 30px; background: white; padding: 40px 25px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 300px; text-align: center;">
