--- a/index.html
+++ b/index.html
@@ -216,20 +216,21 @@
 <body>
 
 <header class="header-library">
-    <div class="overlay"></div>
-    <div class="header-content">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
-        <h1>Perpustakaan Jesika Yusnita Laoly</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="About.html">About</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="tabel.html">Tabel</a></li>
-                <li><a href="http://localhost/tabel.php">PHP</a></li>
-            </ul>
-        </nav>
-    </div>
+  <div class="overlay"></div>
+  <div class="header-content">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website" />
+    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="tabel.html">Tabel</a></li>
+         <li><a href="Prestasi.html">Prestasi</a></li>
+        <li><a href="http://localhost/tabel.php">PHP</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
 
 <!-- Bagian Tentang Saya -->
