--- a/Prestasi.html
+++ b/Prestasi.html
@@ -167,6 +167,12 @@
     </div>
   </section>
 </div>
-
+  
+<div class="linkedin mt-4">
+  <a href="https://www.linkedin.com/in/jesika-yusnita-laoly-59a9612b8?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" style="text-decoration: none; color: #0e76a8; font-weight: bold;">
+    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" width="24" height="24" style="vertical-align: middle; margin-right: 8px;">
+    LinkedIn: Jesika Yusnita Laoly
+  </a>
+</div>
 </body>
 </html>
