--- a/Prestasi.html
+++ b/Prestasi.html
@@ -168,11 +168,20 @@
   </section>
 </div>
   
-<div class="linkedin mt-4">
-  <a href="https://www.linkedin.com/in/jesika-yusnita-laoly-59a9612b8?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" style="text-decoration: none; color: #0e76a8; font-weight: bold;">
-    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" width="24" height="24" style="vertical-align: middle; margin-right: 8px;">
-    LinkedIn: Jesika Yusnita Laoly
-  </a>
-</div>
+<!-- LinkedIn Section -->
+<footer style="background-color: #f0f8ff; padding: 20px 0; text-align: center; margin-top: 50px; box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.05);">
+  <div style="display: inline-flex; align-items: center; gap: 10px;">
+    <a href="https://www.linkedin.com/in/jesika-yusnita-laoly-59a9612b8?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" 
+       target="_blank" 
+       style="display: flex; align-items: center; text-decoration: none; color: #0e76a8; font-size: 16px; font-weight: bold;">
+      <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" 
+           alt="LinkedIn Icon" 
+           width="28" 
+           height="28" 
+           style="margin-right: 8px;" />
+      Kunjungi LinkedIn Jesika Yusnita Laoly
+    </a>
+  </div>
+</footer>
 </body>
 </html>
